# home-scout

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  BOM.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  PRIVACY.md  README.md  SAFETY.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_help.yml  feature_request.yml  hardware_issue.yml
.github/workflows/: docs-build.yml  firmware-ci.yml  python-lint.yml  ros2-ci.yml  stl-validation.yml
config/patrol-routes/: example_two_bedroom.yaml
config/personalities/: minimal.yaml  playful.yaml
config/room-maps/: example_rooms.yaml
docker/: Dockerfile.dev  Dockerfile.sim
docs/: ARCHITECTURE.md  index.md  mkdocs.yml
docs/build-guides/: overview.md  phase-1-voice.md  phase-2-vision.md  phase-3-mobility.md  phase-4-memory.md  phase-5-faces.md  phase-6-drone.md  troubleshooting.md
docs/contributing/: hardware-contributions.md  software-contributions.md
docs/design/: personality-guide.md  room-mapping.md
docs/reference/: camera-calibration.md  network-isolation.md  stm32-firmware.md  ventuno-q-setup.md
firmware/esp32-cam/: platformio.ini
firmware/esp32-cam/src/: main.cpp  motion_detect.cpp  motion_detect.h  wifi_stream.cpp  wifi_stream.h
firmware/stm32-motor-control/: platformio.ini
firmware/stm32-motor-control/src/: can_bridge.cpp  can_bridge.h  encoder.cpp  encoder.h  main.cpp  motor_driver.cpp  motor_driver.h  pid_controller.cpp  pid_controller.h  safety.cpp  safety.h
hardware/chassis/community/: SUBMISSION_GUIDE.md
hardware/chassis/v1-starter/: README.md  print-settings.md
hardware/mounts/camera-mount/: README.md
hardware/mounts/lidar-mount/: README.md
hardware/mounts/speaker-mount/: README.md
hardware/wiring/pinout/: ventuno-q-pinout.md
ros2_ws/src/scout_bringup/: package.xml  setup.py
ros2_ws/src/scout_bringup/config/: personality_default.yaml  scout_params.yaml
ros2_ws/src/scout_bringup/launch/: scout_full.launch.py  scout_voice_only.launch.py
ros2_ws/src/scout_description/: package.xml  setup.py
ros2_ws/src/scout_description/urdf/: scout.urdf.xacro
ros2_ws/src/scout_faces/: package.xml  setup.py
ros2_ws/src/scout_faces/scout_faces/: enrollment_node.py  greeting_node.py  recognition_node.py
ros2_ws/src/scout_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/scout_interfaces/action/: Patrol.action  Transcribe.action
ros2_ws/src/scout_interfaces/msg/: FaceDetection.msg  ObjectSighting.msg  PatrolStatus.msg
ros2_ws/src/scout_interfaces/srv/: EnrollFace.srv  StartPatrol.srv  WhereIs.srv
ros2_ws/src/scout_memory/: package.xml  setup.py
ros2_ws/src/scout_memory/db/: schema.sql
ros2_ws/src/scout_memory/scout_memory/: confidence_decay.py  object_memory_node.py  query_engine.py  spatial_index.py
ros2_ws/src/scout_nav/: package.xml  setup.py
ros2_ws/src/scout_nav/scout_nav/: base_driver_node.py  odometry_node.py  patrol_node.py  slam_node.py
ros2_ws/src/scout_simulation/: package.xml  setup.py
ros2_ws/src/scout_simulation/launch/: gazebo_house.launch.py
ros2_ws/src/scout_vision/: package.xml  setup.py
ros2_ws/src/scout_vision/scout_vision/: camera_node.py  detector_node.py  npu_inference.py  tracker_node.py
ros2_ws/src/scout_voice/: package.xml  setup.py
ros2_ws/src/scout_voice/scout_voice/: asr_node.py  conversation_node.py  tts_node.py  wake_word_node.py
scripts/: download-models.sh  setup-dev.sh  setup-ventuno.sh  verify-privacy.sh
tests/: conftest.py
tests/hardware/: README.md
tests/integration/: README.md
tests/simulation/: README.md
tests/unit/: test_confidence_decay.py  test_query_engine.py  test_spatial_index.py
training/face-recognition/: README.md
training/notebooks/: exploration.ipynb
training/object-detection/: README.md
training/wake-word/: README.md
