<?xml version="1.0"?>
<package format="3">
  <name>scout_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and system configuration for Home Scout</description>
  <maintainer email="you@example.com">Home Scout Contributors</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>scout_interfaces</exec_depend>
  <exec_depend>scout_voice</exec_depend>
  <exec_depend>scout_vision</exec_depend>
  <exec_depend>scout_nav</exec_depend>
  <exec_depend>scout_memory</exec_depend>
  <exec_depend>scout_faces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
