<?xml version="1.0"?>
<package format="3">
  <name>scout_description</name>
  <version>0.1.0</version>
  <description>URDF robot description for Home Scout</description>
  <maintainer email="you@example.com">Home Scout Contributors</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
