<?xml version="1.0"?>
<package format="3">
  <name>scout_memory</name>
  <version>0.1.0</version>
  <description>Object memory: SQLite storage, spatial indexing, query engine (Phase 4)</description>
  <maintainer email="you@example.com">Home Scout Contributors</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>scout_interfaces</depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
