<?xml version="1.0"?>
<package format="3">
  <name>scout_nav</name>
  <version>0.1.0</version>
  <description>Navigation: base driver, odometry, patrol, SLAM (Phase 3)</description>
  <maintainer email="you@example.com">Home Scout Contributors</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>scout_interfaces</depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
