<?xml version="1.0"?>
<package format="3">
  <name>scout_simulation</name>
  <version>0.1.0</version>
  <description>Gazebo simulation environment for Home Scout</description>
  <maintainer email="you@example.com">Home Scout Contributors</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>scout_description</exec_depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
